# cmake_in_cmake

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/: indent_dotvscode_jsons.sh  update_cmakelists_txt.sh
src/: example.cc  hw.cc  lib_mul.cc  lib_mul.h  test_add.cc
